[package]
name = "proc-reader"
version = "0.4.1-pre"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/proc-reader"
keywords = ["reader", "process"]
categories = ["command-line-interface"]
license = "MIT"
readme = "README.md"
description = "A std::io::Read implementation for stdout/stderr of other proccess"
build = "build.rs"

[dependencies]
error-chain = "0.11.0"
libc        = "0.2.40"
#nix         = "0.10.0"
nix         = { git = "https://github.com/nix-rust/nix" }

[build-dependencies]
skeptic     = "0.13"

[dev-dependencies]
skeptic     = "0.13"

[package.metadata.release]
dev-version-ext            = "pre"
pre-release-commit-message = "Prepare to v{{version}}"
pro-release-commit-message = "Start next development iteration v{{version}}"
pre-release-replacements   = [
    { file = "README.md", search = "proc-reader = \"[a-z0-9\\.-]+\"", replace = "proc-reader = \"{{version}}\"" },
]
tag-message                = "Bump version to {{version}}"
tag-prefix                 = "v"
